This file records noteworthy changes in Magick++

(5.2.8)
  * Released with ImageMagick 5.2.8
  * Added fill and stroke methods to Montage.
  * Support supplying composition rule to DrawableCompositeImage.

(5.2.7)
  * Released with ImageMagick 5.2.7
  * Added convolve and unsharpmask methods to Image.
  * Added deconstructImages and mosaicImages template functions.
  * Fixed handling of geometry parameter to annotate method.

(5.2.6)
  * Released with ImageMagick 5.2.6.
  * Added support for a SVG-style dash array and dash offset
    parameters (for drawing dashed lines).
  * Added support for setting the shape to be used at the end of open
    subpaths when they are stroked.
  * Added support for setting the shape to be used at the corners of
    paths (or other vector shapes) when they are stroked.
  * Added support for setting extension limit for miter joins.
  * Rotate text the proper way using an affine transform.

(5.2.5)
  * Released with ImageMagick 5.2.5.
  * Completely re-wrote drawable object classes in order to support
    all current ImageMagick drawing capabilities using a list-based paradigm.
    New drawing capabilities include coordinate transformations and the
    currently undocumented (but quite powerful) path capabilities.

(5.2.4)
  * Released with ImageMagick 5.2.4.
  * Magick++ is now built by the regular ImageMagick build process.
    when --with-magick_plus_plus is specified to configure.
  * Fixed bug with setting text drawing options.
  * Fixed API bug with colorize.  Options adjusted to match ImageMagick
    API change (API change was long ago).
  * Library compiles using Sun Workshop 5.0 compiler.  Linkage problems with
    some demos/tests due to libtool-related compiler/linker bug.
  * Compiles using Sun Forte 6.0 compiler.

(5.2.3)
  * Switched to new release numbering (match ImageMagick release number)
  * Released with ImageMagick 5.2.3.
  * Fixed bug in which the Image read method was not reporting
    warnings (only errors).