@@ -2,7 +2,9 @@ This file records noteworthy changes in Magick++
 
 (5.2.8)
   * Released with ImageMagick 5.2.8
-  * Added fill and stroke methods to Montage.
+  * Added 'fill' and 'stroke' methods to Montage class.
+  * Added 'erase' and 'strokeAntiAlias' methods to Image class.
+  * Renamed Image class 'layer' method to 'channel'.
   * Support supplying composition rule to DrawableCompositeImage.
 
 (5.2.7)
